# mlx-yap

./: .gitignore  NOTES.md  README.md  config.example.yaml  pyproject.toml
src/mlx_yap/: __main__.py  cli.py  config.py  daemon.py  output.py  processor.py  recorder.py  transcriber.py
